--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,9 +39,12 @@
                 <header class="major">
                     <h2>A propos de moi:</h2>
                 </header>
+                <div style=" display:flex;justify-content:center;">
+                    <img src="assets/images/jim.png" style="width:200px;"/>
+                </div>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Portfolio</a></li>
+                    <li><a href="landing.html" class="button next">Projets</a></li>
                 </ul>
             </div>
         </section>
