--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,11 @@
                     <h2>A propos de moi:</h2>
                 </header>
                 <div style=" display:flex;justify-content:center;">
+                    <div style=" display:flex;flex-direction:column;justify-content:center;">
                     <img src="assets/images/jim.png" style="width:200px;"/>
+                    <h2>Jimmy Cart-Lamy</h2>
+                    </div>
+                    
                 </div>
                 <p>{{ content }}</p>
                 <ul class="actions">
