--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,9 +40,9 @@
                     <h2>A propos de moi:</h2>
                 </header>
                 <div style=" display:flex;justify-content:center;">
-                    <div style=" display:flex;flex-direction:column;justify-content:center;">
+                    <div style="display:flex;flex-direction:column;justify-content:center;align-items: center;">
                     <img src="assets/images/jim.png" style="width:200px;"/>
-                    <h2>Jimmy Cart-Lamy</h2>
+                    <h3>Jimmy Cart-Lamy</h3>
                     </div>
                     
                 </div>
