--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>A propos de moi:</h2>
+                    <h2>À propos de moi :</h2>
                 </header>
                 <div style=" display:flex;justify-content:center;">
                     <div style="display:flex;flex-direction:column;justify-content:center;align-items: center;">
