update hello world with fake balise

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <h1>{{ page.landing-title }}</h1>
+                <h1><span style="color:rgb(255, 119, 0)">&lth1&gt</span><span style="color:rgb(0, 123, 255)">{{ page.landing-title }}</span><span style="color:rgb(255, 119, 0)">&lth1&gt</span></h1>
             </header>
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
