--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -29,7 +29,7 @@
       <img src="/assets/ink.jpg"  />
     </span>
     <header class="major">
-      <h3><a href="www.linkedin.com/in/jimmy-cart-lamy" class="link">Linkedin</a></h3>
+      <h3><a href="https://linkedin.com/in/jimmy-cart-lamy" class="link">Linkedin</a></h3>
     </header>
   </article>
 </section>
