--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,14 @@
 <!-- Footer -->
 	<footer id="footer">
-		<div class="inner">
-			
+		<div style="display: flex;align-items: center;justify-content: center; padding-top: 20px;padding-top: -20px;">
+			<a href="mailto:cart-lamy.jimmy@live.fr" >cart-lamy.jimmy@live.fr</a>
+		</div>
+		<div style="padding-top: 10px;padding-bottom: 10px;" class="inner">
 			<ul class="copyright">
 				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
 				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 				<li>Jekyll integration: Andrew Banchich</li>
+				
 
 			</ul>
 		</div>
