--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -30,6 +30,7 @@
     </span>
     <header class="major">
       <h3><a href="https://linkedin.com/in/jimmy-cart-lamy" class="link">Linkedin</a></h3>
+      <p>Accès à https://linkedin.com/in/jimmy-cart-lamy</p>
     </header>
   </article>
 </section>
